Fix text overlapping

--- a/src/styles/components/Emission.css
+++ b/src/styles/components/Emission.css
@@ -50,6 +50,7 @@
 
 .AppContainer--mobile .EmissionCalendar {
     min-width: 100%;
+    height: auto;
     margin: 0;
 }
 
